# Galapagos

./: .gitignore  .gitmodules  README.md  function-info-new.md  function-info.md  resutls.md  verification-results.md
function_extraction/: build.py  compare_ctags.py  create_function_files.js  extract.sh  extract_all.sh  find_top.js  function-picks.json  generate_function_info.js  tags  top_functions.json
functions/: count_compiled.sh  template.c  template.go
functions/FFmpeg/: 0_av_log.c  2_get_bits.c  3_get_bits.c  4_put_bits.c  8_avio_wb32.c  9_av_calloc.c  functions_info.json
functions/NetworkManager/: 0_nm_connection_add_setting.c  100_dispose.c  101_dispose.c  102_dispose.c  103_dispose.c  104_dispose.c  105_dispose.c  106_dispose.c  107_dispose.c  108_dispose.c  109_dispose.c  10_finalize.c  110_dispose.c  111_dispose.c  112_dispose.c  113_dispose.c  114_dispose.c  115_dispose.c  116_dispose.c  117_dispose.c  118_dispose.c  119_dispose.c  11_finalize.c  120_dispose.c  121_dispose.c  122_dispose.c  123_dispose.c  124_dispose.c  125_dispose.c  126_dispose.c  127_dispose.c  128_dispose.c  129_dispose.c  12_finalize.c  130_dispose.c  131_dispose.c  132_dispose.c  133_dispose.c  134_dispose.c  135_dispose.c  (+161 more)
functions/alsa-lib/: 0_alaw_to_s16.c  0_delete_tree.c  100_get_string.c  103_new_object.c  104_snd_config_add.c  105_snd_dlclose.c  106_snd_pcm_hw_refine.c  107_snd_pcm_mmap_appl_forward.c  108_snd_pcm_mmap_areas.c  109_snd_config_imake_integer.c  10_INTERNAL.c  110_snd_pcm_dump.c  111_snd_pcm_state.c  112_snd_pcm_free_chmaps.c  113_snd_pcm_hw_params_dump.c  114_snd_pcm_open_slave.c  115_new_string.c  116_snd_output_stdio_attach.c  117_snd_pcm_hw_param_set_first.c  118_snd_pcm_mmap_commit.c  119_snd_pcm_shm_action.c  11_INTERNAL.c  120_snd_pcm_start.c  121_snd_ctl_shm_action.c  122_hw_is_mask.c  123_tplg_get_integer.c  124__snd_pcm_hw_params_any.c  125_snd_pcm_avail_update.c  126_tplg_elem_free_list.c  127_snd_config_imake_string.c  128_snd_pcm_direct_semaphore_up.c  129_list_add.c  12_INTERNAL.c  130_parse_string_substitute3.c  131_snd_config_make.c  132_snd_pcm_rewind.c  133_tplg_elem_lookup.c  134_gettimestamp.c  135_gettimestamp.c  136_snd_pcm_free.c  (+166 more)
functions/coreutils/: 0_emit_ancillary_info.c  0_memset.c  11_xalloc_die.c  14_atexit.c  (+42 more)
init/: NOTES.md  md5.c  md5.v.c
linker/: .gitignore  CMakeLists.txt  README.md  build.sh  build_deps.sh  r.txt  test-cl-n.sh  test-sl-n.sh  test-sl.sh  test.sh
linker/include/c/: c.h
linker/include/common/: Common.h
linker/include/go/: go.h
linker/include/linker/: Linker.h
linker/lib/c/: c.cpp
linker/lib/common/: Common.cpp
linker/lib/go/: go.cpp
linker/tests/: main-variant.c.bc  main-variant.c.ll  main.c.bc  main.c.ll  main.go.bc  main.go.ll  main.go.nod.bc  original  result  result.bc  result.ll  result.og  variant
linker/tests/chi/: chi-variant.c  chi.c  chi.go
linker/tests/sum/: a.out  sum-variant.c  sum-variant.go  sum.c
linker/tests/zero/: zero  zero-variant.c  zero.c
linker/tools/: linker.cpp
rosetta_codes/: quicksort.c  quicksort.md
scripts/: assemble_n_version.py  compile-miscompilation.sh  compile_variants.py  compile_variants_miscompilation.py  config-miscompilation.toml  config.toml  diff_compare.sh  distance_utils.py  dynamic_div.py  dynamic_div_plot.py  eq_variants.json  eq_variants_miscompilation.json  generate_c.py  generate_variants.py  generate_variants_rq3.py  get_equivalent.py  prompts.md  rebuild-miscompilation.sh  reports_to_md.py  requirements.txt  sed-same-timestamp.sh  setup.py  split_varaints.py  split_variants.py  split_variants_miscompilation.py  template_variants.py  template_variants_miscompilation.py  test.go  test_comp.py  tmp.c  validation_table.py  validation_table_-O0.json  validation_table_-O2.json
(+20691 files in other folders)
